[JSC] FTLB3Output generates some invalid ZExt32 https://bugs.webkit.org/show_bug.cgi?id=151905

Patch by Benjamin Poulain <bpoulain@apple.com> on 2015-12-19
Reviewed by Filip Pizlo.

FTLLowerDFGToLLVM calls zeroExt() to int32 in some cases.
We were generating ZExt32 with Int32 as return type :(

* ftl/FTLB3Output.h:
(JSC::FTL::Output::zeroExt):

Canonical link: https://commits.webkit.org/170562@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194315 268f45cc-cd09-0410-ab3c-d52691b4dbfc