Source/JavaScriptCore/ftl/FTLB3Output.h
@@ -179,7 +179,12 @@ public:
     LValue sensibleDoubleToInt(LValue) { CRASH(); }
 
     LValue signExt32To64(LValue value) { return m_block->appendNew<B3::Value>(m_proc, B3::SExt32, origin(), value); }
-    LValue zeroExt(LValue value, LType type) { return m_block->appendNew<B3::Value>(m_proc, B3::ZExt32, type, origin(), value); }
+    LValue zeroExt(LValue value, LType type)
+    {
+        if (value->type() == type)
+            return value;
+        return m_block->appendNew<B3::Value>(m_proc, B3::ZExt32, origin(), value);
+    }
     LValue zeroExtPtr(LValue value) { return zeroExt(value, B3::Int64); }
     LValue fpToInt32(LValue value) { CRASH(); }
     LValue fpToUInt32(LValue value) { CRASH(); }
